Closed Bug 355817 Opened 19 years ago Closed 19 years ago

Some Cmd+Shift+letter shortcuts are broken

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

PowerPC
macOS
defect
Not set
major

Tracking

()

VERIFIED FIXED

People

(Reporter: jruderman, Assigned: jaas)

References

Details

(Keywords: regression, Whiteboard: [blocking1.9a1+])

Attachments

(1 file)

The following shortcuts don't work, and beep instead: Cmd+Shift+R force reload Cmd+Shift+G find previous The following shortcuts do work: Cmd+Shift+I inspect page with dom inspector Cmd+Shift+Z redo I'm guessing this is a regression from cocoa.
Cmd+=, which used to work like Cmd+Shift+= (i.e., Cmd++), now also beeps at me. I assume it's the same issue.
See also bug 355797.
For opening the Downloads window, Cmd+J doesn't work, but Cmd+Shift+J does. Weird! (Likely related to bug 340065.)
Flags: blocking1.9?
Hmm... "force reload" and "find previous" are not to be found in any menu.
Blocks: 355797
So this is pretty much annoying the hell out of me. If I don't shift-reload I clobber other people's bug changes, and if I do I'm forced to use the mouse... Can we please do something about it? Certainly by a few weeks from now so we don't ship an alpha with this?
badly broken keyboard shortcuts are definitely a 1.9 blocker, not sure how we're indicating alpha blocker status atm.
Assignee: nobody → joshmoz
Flags: blocking1.9? → blocking1.9+
We're indicating it via the status whiteboard [blocking1.9a1+], based on 1.9 triage meeting discussion. Of course for that discussion to happen the bug needs to be blocking1.9?... I'm taking the liberty of adding the alpha-blocking annotation, since that seems preferable to resetting the flag back to ?. But please let's not unilaterally mark bugs a blockers, ok?
Whiteboard: [blocking1.9a1+]
I think we should take this off the alpha blocker list. This is part of a bigger problem, same thing as the problem we have with menubar-less dialogs.
Attached patch fix v1.0Splinter Review
Here we intercept key commands as they make their way up the view chain, before they get to the menu system. Then, we call performKeyEquivalent on the main menu bar manually and if it returns yes we just let it handle it. If it returns no then we handle the event ourselves.
Attachment #247688 - Flags: review?(mark)
Attachment #247688 - Flags: review?(mark) → review+
Attachment #247688 - Flags: superreview?(mikepinkerton)
Comment on attachment 247688 [details] [diff] [review] fix v1.0 sr=pink
Attachment #247688 - Flags: superreview?(mikepinkerton) → superreview+
fixed on trunk
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
*** Bug 350225 has been marked as a duplicate of this bug. ***
Status: RESOLVED → VERIFIED
Depends on: 363002
Blocks: 376077
No longer blocks: 376077
Component: Keyboard: Navigation → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: